--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
   --footer-background: #2e2f42;
   /* Other color */
   --iris-color: #4d5ae5;
+  --border-color: #e7e9fc;
 }
 
 body {
@@ -89,7 +90,7 @@ ul {
 
 /**
   |============================
-  | Button
+  | Buttons
   |============================
 */
 
@@ -127,7 +128,7 @@ ul {
 .secondary-button {
   color: var(--iris-color);
   background-color: var(--secondary-background);
-  border: 1px solid #e7e9fc;
+  border: 1px solid var(--border-color);
   padding-top: 12px;
   padding-right: 24px;
   padding-bottom: 12px;
@@ -147,7 +148,7 @@ ul {
   |============================
 */
 .header {
-  border-bottom: 1px solid #e7e9fc;
+  border-bottom: 1px solid var(--border-color);
 }
 .flex {
   display: flex;
@@ -178,13 +179,7 @@ ul {
 }
 .site-nav {
   display: flex;
-}
-
-.site-nav-list {
-  margin-right: 40px;
-}
-.site-nav-list:last-child {
-  margin-right: 0;
+  gap: 40px;
 }
 
 .site-nav-item {
@@ -205,13 +200,7 @@ ul {
 }
 .address-nav {
   display: flex;
-}
-
-.address-nav-list {
-  margin-right: 40px;
-}
-.address-nav-list:last-child {
-  margin-right: 0;
+  gap: 40px;
 }
 
 .address-item {
@@ -252,7 +241,9 @@ ul {
   | Section Advantages
   |============================
 */
-
+.section-advantages {
+  padding-bottom: 0;
+}
 .secondary-title {
   margin-bottom: 8px;
   color: var(--title);
@@ -264,14 +255,7 @@ ul {
 
 .advantages-list {
   display: flex;
-}
-
-.advantages-list-item {
-  width: calc((100%-3 * 24) / 4);
-}
-
-.advantages-list-item:not(:last-child) {
-  margin-right: 24px;
+  gap: 24px;
 }
 
 /**
@@ -292,15 +276,9 @@ ul {
 
 .projects-list {
   display: flex;
+  gap: 24px;
 }
 
-.projects-list-item {
-  width: calc((100%-2 * 24) / 3);
-}
-
-.projects-list-item:not(:last-child) {
-  margin-right: 24px;
-}
 /**
   |============================
   | Section Our team
@@ -370,9 +348,9 @@ ul {
   padding-bottom: 32px;
   padding-left: 16px;
   padding-right: 16px;
-  border-right: 1px solid #e7e9fc;
-  border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
+  border-left: 1px solid var(--border-color);
 }
 /**
   |============================
@@ -393,12 +371,12 @@ ul {
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
-  display: flex;
   align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 .footer-logo-element {
+  display: inline-block;
   color: var(--footer-text);
 }
 .footer-text {
